# Py2001

./: .gitignore  CITATION.cff  INSTALL_jmt.md  README.md  pyproject.toml
jmt_tests/: run_1.py  run_2_dbm_calc.py
src/Py2001/: P2001.npz  P2001.py  __init__.py  initiate_digital_maps.py
tests/: validateP2001.py
tests/validation_examples/: Validation_examples_ITU-R_P_2001_b2iseac_profile.csv  Validation_examples_ITU-R_P_2001_prof4_profile.csv
